SERVER-52663 Fix the lifetime of ScopedMetricsCollector in ExecCommandDatabase